--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
     <ul>
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
+        <li><a href="https://raghavsharma16.github.io/Services/">Services</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">About us</a></li>
        
